<resources>
    <string name="app_name">Email</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inbox">Inbox</string>
    <string name="menu_sent">Sent</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_logout">Log Out</string>

    <string name="user_email">lehuuton@gmail.com</string>

    <string name="writemail_compose">Compose</string>
    <string name="writemail_to">To </string>
    <string name="writemail_cc">CC </string>
    <string name="writemail_subject">Subject</string>
    <string name="writemail_content">Content</string>

    <string name="confirmDelete">Delete this message?</string>
    <string name="confirmLogout">Do you want to log out?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="login">Login</string>
    <string name="email_address">Gmail address</string>
    <string name="password">Password</string>
    <string name="missing_info">Please fill email and password</string>
    <string name="wrong_info">Failed to log in</string>
    <string name="logging_in">Logging in...</string>
    <string name="logging_out">Logging out...</string>
    <string name="readmail">Read mail</string>
    <string name="reply">Reply</string>
    <string name="forward">Forward</string>
    <string name="mail_sending">Sending mail</string>
    <string name="mail_sent">Mail sent</string>
    <string name="mail_sent_fail">Failed to send mail</string>
    <string name="user_name">Your name</string>
    <string name="delete">Delete</string>
    <string name="move">Move to spam</string>
    <string name="loading">Loading, please wait</string>
    <string name="change_user_name">Change user name</string>
    <string name="changed_name">Changed name successfully</string>
</resources>
