<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_menu_reply"
        android:title="@string/reply"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_menu_forward"
        android:title="@string/forward"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/move"
        android:icon="@drawable/ic_menu_spam"
        android:title="@string/move"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_menu_trash"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>