<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="120dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/user_name"
                android:text="Anh Khanh He"
                android:hint="@string/user_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailaddr"
                android:text="anhkhanhhe@gmail.com"
                android:hint="@string/email_address"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="vip12345"
                android:id="@+id/password" />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/login"
                android:onClick="login" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>