<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/writemail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/textedit_height"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/receiver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/textedit_padding_left_big"
                android:gravity="center_vertical">
                <requestFocus />
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/textedit_padding_left"
                android:gravity="center_vertical"
                android:text="@string/writemail_to" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/textedit_height"
            android:gravity="center_vertical">
            <EditText
                android:id="@+id/receiver_cc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/textedit_padding_left_big"
                android:gravity="center_vertical">
                <requestFocus />
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/textedit_padding_left"
                android:gravity="center_vertical"
                android:text="@string/writemail_cc" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/textedit_height"
            android:inputType="text"
            android:paddingLeft="@dimen/textedit_padding_left"
            android:hint="@string/writemail_subject"
            android:id="@+id/subject"
            android:gravity="center_vertical"/>

        <EditText
            android:hint="@string/writemail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:paddingLeft="@dimen/textedit_padding_left"
            android:id="@+id/content"
            android:layout_weight="1"
            android:gravity="top" />
    </LinearLayout>
</LinearLayout>